bzr-svn 0.4.4	UNRELEASED

  PERFORMANCE

   * Improved import times, making bzr faster if bzr-svn is loaded but 
     not used.

  IMPROVEMENTS
   
   * Avoid tracebacks on "Malformed data" errors.

   * Make push location optional for svn-push. 
   
   * Make svn-push support --remember.

  INTERNALS

   * Handle NULL_REVISION in SvnRepository.copy_content(). Fixes compatibility 
     with bzr merge-into.

   * Implement ListBranchingScheme.is_branch_parent(). (#144357)

   * Use revprop lists rather than just commit message when committing.

   * The version of bzr-rebase is now checked before it's being used.

   * Handle checks of modified children correctly when path is the root 
     in LogWalker.find_latest_change().

  BUG FIXES

   * Fix compatibility with 0.92.

   * Fix compatibility with packs.

   * Handle long file names with unicode characters correctly on 
     python2.4 (#129334)

   * Give proper warning message when running 'bzr svn-branching-scheme' on 
     something that is not a Subversion repository. (#145159)

   * Give proper warning message when running 'bzr svn-import' on 
     something that is not a Subversion repository. 

   * Support svn+ hack when committing in bound branches. (#150699)

   * Give proper error when changes can't be pushed to root of repository. 
     (#145148)

   * Encode = in list branching scheme names (unusable in Subversion property 
     names). (#125751)

   * Fix 'bzr checkout --lightweight' for http and https branches. 
     (#144032)

   * Don't print traceback when raising errors about bzr versions.

   * Show proper exception when lightweight checkout is out of date.

   * Fix pulling in changes push earlier by bzr-svn with directory renames 
     of directories containing files. (#153347)

  DOCUMENTATION

   * Add simple FAQ file. (#144388)

bzr-svn 0.4.3	2007-09-15
 
  PERFORMANCE

   * Avoid extra RA connection in LogWalker if it isn't going to be used.

  BUG FIXES
